--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -670,6 +670,7 @@ keys:
       redistribute_routes:
         type: list
         primary_key: source_protocol
+        allow_duplicate_primary_key: True
         convert_types:
           - dict
           - list
@@ -700,6 +701,17 @@ keys:
                 Only applicable if `source_protocol` is one of `connected`, `static`, `isis`, `user`, `dynamic`.
             include_leaked:
               type: bool
+            ospf_route_type:
+              type: str
+              valid_values:
+                - "external"
+                - "internal"
+                - "nssa-external"
+                - "nssa-external 1"
+                - "nssa-external 2"
+              description: |
+                Routes learned by the OSPF protocol.
+                The `ospf_route_type` is valid for source_protocols 'ospf' and 'ospfv3'.
       vlan_aware_bundles:
         type: list
         primary_key: name
@@ -1303,6 +1315,7 @@ keys:
           redistribute_routes:
             type: list
             primary_key: source_protocol
+            allow_duplicate_primary_key: True
             items:
               type: dict
               keys:
@@ -1331,6 +1344,17 @@ keys:
                     Example: MyFunction(myarg).
                     `route_map` and `rcf` are mutually exclusive. `route_map` takes precedence.
                     Only applicable if `source_protocol` is one of `connected`, `static`, `isis`, `user`, `dynamic`.
+                ospf_route_type:
+                  type: str
+                  valid_values:
+                    - "external"
+                    - "internal"
+                    - "nssa-external"
+                    - "nssa-external 1"
+                    - "nssa-external 2"
+                  description: |
+                    Routes learned by the OSPF protocol.
+                    The `ospf_route_type` is valid for source_protocols 'ospf' and 'ospfv3'.
       address_family_ipv4_multicast:
         type: dict
         keys:
@@ -1374,6 +1398,7 @@ keys:
           redistribute_routes:
             type: list
             primary_key: source_protocol
+            allow_duplicate_primary_key: true
             convert_types:
               - dict
             items:
@@ -1401,6 +1426,17 @@ keys:
                     Example: MyFunction(myarg).
                     `route_map` and `rcf` are mutually exclusive. `route_map` takes precedence.
                     Only applicable if `source_protocol` is `isis`.
+                ospf_route_type:
+                  type: str
+                  valid_values:
+                    - "external"
+                    - "internal"
+                    - "nssa-external"
+                    - "nssa-external 1"
+                    - "nssa-external 2"
+                  description: |
+                    Routes learned by the OSPF protocol.
+                    The `ospf_route_type` is valid for source_protocols 'ospf' and 'ospfv3'.
       address_family_ipv4_sr_te:
         type: dict
         keys:
@@ -1526,6 +1562,7 @@ keys:
           redistribute_routes:
             type: list
             primary_key: source_protocol
+            allow_duplicate_primary_key: True
             convert_types:
               - dict
             items:
@@ -1555,6 +1592,17 @@ keys:
                     Example: MyFunction(myarg).
                     `route_map` and `rcf` are mutually exclusive. `route_map` takes precedence.
                     Only used if `source_protocol` is one of `connected`, `static`, `isis`, `user`, `dynamic`.
+                ospf_route_type:
+                  type: str
+                  valid_values:
+                    - "external"
+                    - "internal"
+                    - "nssa-external"
+                    - "nssa-external 1"
+                    - "nssa-external 2"
+                  description: |
+                    Routes learned by the OSPF protocol.
+                    The `ospf_route_type` is valid for source_protocols 'ospfv3'.
       address_family_ipv6_multicast:
         type: dict
         keys:
@@ -1628,6 +1676,7 @@ keys:
           redistribute_routes:
             type: list
             primary_key: source_protocol
+            allow_duplicate_primary_key: true
             convert_types:
               - dict
             items:
@@ -1653,6 +1702,17 @@ keys:
                     Example: MyFunction(myarg).
                     `route_map` and `rcf` are mutually exclusive. `route_map` takes precedence.
                     Only applicable if `source_protocol` is `isis`.
+                ospf_route_type:
+                  type: str
+                  valid_values:
+                    - "external"
+                    - "internal"
+                    - "nssa-external"
+                    - "nssa-external 1"
+                    - "nssa-external 2"
+                  description: |
+                    Routes learned by the OSPF protocol.
+                    The `ospf_route_type` is valid for source_protocols 'ospf' and 'ospfv3'.
       address_family_ipv6_sr_te:
         type: dict
         keys:
@@ -2491,6 +2551,7 @@ keys:
             redistribute_routes:
               type: list
               primary_key: source_protocol
+              allow_duplicate_primary_key: true
               convert_types:
                 - dict
                 - list
@@ -2522,6 +2583,17 @@ keys:
                       Example: MyFunction(myarg).
                       `route_map` and `rcf` are mutually exclusive. `route_map` takes precedence.
                       Only applicable if `source_protocol` is one of `connected`, `dynamic`, `isis`, `static` and `user`.
+                  ospf_route_type:
+                    type: str
+                    valid_values:
+                      - "external"
+                      - "internal"
+                      - "nssa-external"
+                      - "nssa-external 1"
+                      - "nssa-external 2"
+                    description: |
+                      Routes learned by the OSPF protocol.
+                      The `ospf_route_type` is valid for source_protocols 'ospf' and 'ospfv3'.
             aggregate_addresses:
               type: list
               primary_key: prefix
@@ -2663,6 +2735,7 @@ keys:
                 redistribute_routes:
                   type: list
                   primary_key: source_protocol
+                  allow_duplicate_primary_key: true
                   convert_types:
                     - dict
                   items:
@@ -2692,6 +2765,17 @@ keys:
                           Example: MyFunction(myarg).
                           `route_map` and `rcf` are mutually exclusive. `route_map` takes precedence.
                           Only applicable if `source_protocol` is one of `connected`, `dynamic`, `isis`, `static` and `user`.
+                      ospf_route_type:
+                        type: str
+                        valid_values:
+                          - "external"
+                          - "internal"
+                          - "nssa-external"
+                          - "nssa-external 1"
+                          - "nssa-external 2"
+                        description: |
+                          Routes learned by the OSPF protocol.
+                          The `ospf_route_type` is valid for source_protocols 'ospf' and 'ospfv3'.
             address_family_ipv6:
               type: dict
               keys:
@@ -2795,6 +2879,7 @@ keys:
                 redistribute_routes:
                   type: list
                   primary_key: source_protocol
+                  allow_duplicate_primary_key: true
                   convert_types:
                     - dict
                   items:
@@ -2823,6 +2908,17 @@ keys:
                           Example: MyFunction(myarg).
                           `route_map` and `rcf` are mutually exclusive. `route_map` takes precedence.
                           Only applicable if `source_protocol` is one of `connected`, `dynamic`, `isis`, `static` and `user`.
+                      ospf_route_type:
+                        type: str
+                        valid_values:
+                          - "external"
+                          - "internal"
+                          - "nssa-external"
+                          - "nssa-external 1"
+                          - "nssa-external 2"
+                        description: |
+                          Routes learned by the OSPF protocol.
+                          The `ospf_route_type` is valid for source_protocols 'ospfv3'.
             address_family_ipv4_multicast:
               type: dict
               keys:
@@ -2883,6 +2979,7 @@ keys:
                 redistribute_routes:
                   type: list
                   primary_key: source_protocol
+                  allow_duplicate_primary_key: true
                   convert_types:
                     - dict
                   items:
@@ -2909,6 +3006,17 @@ keys:
                           Example: MyFunction(myarg).
                           `route_map` and `rcf` are mutually exclusive. `route_map` takes precedence.
                           Only applicable if `source_protocol` is `isis`.
+                      ospf_route_type:
+                        type: str
+                        valid_values:
+                          - "external"
+                          - "internal"
+                          - "nssa-external"
+                          - "nssa-external 1"
+                          - "nssa-external 2"
+                        description: |
+                          Routes learned by the OSPF protocol.
+                          The `ospf_route_type` is valid for source_protocols 'ospf' and 'ospfv3'.
             address_family_ipv6_multicast:
               type: dict
               keys:
@@ -2969,6 +3077,7 @@ keys:
                 redistribute_routes:
                   type: list
                   primary_key: source_protocol
+                  allow_duplicate_primary_key: true
                   convert_types:
                     - dict
                   items:
@@ -2994,6 +3103,17 @@ keys:
                           Example: MyFunction(myarg).
                           `route_map` and `rcf` are mutually exclusive. `route_map` takes precedence.
                           Only applicable if `source_protocol` is `isis`.
+                      ospf_route_type:
+                        type: str
+                        valid_values:
+                          - "external"
+                          - "internal"
+                          - "nssa-external"
+                          - "nssa-external 1"
+                          - "nssa-external 2"
+                        description: |
+                          Routes learned by the OSPF protocol.
+                          The `ospf_route_type` is valid for source_protocols 'ospf' and 'ospfv3'.
             address_family_flow_spec_ipv4:
               type: dict
               keys:
