--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -5557,6 +5557,10 @@ $defs:
             This setting can be overridden per VRF.
 
             '
+        evpn_vlan_bundle:
+          type: str
+          description: Enable `evpn_vlan_bundle` for all l2vlans and SVIs under the
+            tenant. This `evpn_vlan_bundle` should be present in `evpn_vlan_bundles`.
         bgp_peer_groups:
           documentation_options:
             table: network-services-vrfs-bgp-settings
@@ -6230,6 +6234,8 @@ $defs:
                       description: 'Name of a bundle defined under ''evpn_vlan_bundles''
                         to inherit configuration.
 
+                        This setting overrides "evpn_vlan_bundle" set at tenant level.
+
                         The common option "evpn_vlan_aware_bundles" is disregarded
                         for this option.
 
@@ -6901,6 +6907,8 @@ $defs:
                 type: str
                 description: 'Name of a bundle defined under ''evpn_vlan_bundles''
                   to inherit configuration.
+
+                  This setting overrides "evpn_vlan_bundle" set at tenant level.
 
                   The common option "evpn_vlan_aware_bundles" is disregarded for this
                   option.
